@@ -27,6 +27,8 @@ class QuoteTests(TestCase):
         self.assertEqual(quote('\\'), '"\\"')
         self.assertEqual(quote('-+&|!^~*?:'), '"\\-\\+\\&\\|\\!\\^\\~\\*\\?\\:"')
         self.assertEqual(quote('john@foo.com'), '"john@foo.com"')
+        self.assertEqual(quote(' '), '" "')
+        self.assertEqual(quote(''), '""')
 
     def testQuoted(self):
         self.assertEqual(quote('"'), '')
@@ -37,6 +39,8 @@ class QuoteTests(TestCase):
         self.assertEqual(quote('"foo bar"'), 'foo bar')
         self.assertEqual(quote('"foo bar?"'), 'foo bar?')
         self.assertEqual(quote('"-foo +bar"'), '-foo +bar')
+        self.assertEqual(quote('" "'), '" "')
+        self.assertEqual(quote('""'), '')
 
     def testUnicode(self):
         self.assertEqual(quote('foø'), '"fo\xc3\xb8"')
@@ -77,6 +81,8 @@ class QueryTests(TestCase):
         self.assertEqual(bq(name='foo*'), '+name:"foo\\*"')
         self.assertEqual(bq(name='foo bar'), '+name:"foo bar"')
         self.assertEqual(bq(name='john@foo.com'), '+name:"john@foo.com"')
+        self.assertEqual(bq(name=' '), '+name:" "')
+        self.assertEqual(bq(name=''), '')
 
     def testMultiValueQueries(self):
         bq = self.search.buildQuery
@@ -93,6 +99,8 @@ class QueryTests(TestCase):
         self.assertEqual(bq('foo', name=('bar', 'hmm')), '+foo +name:(bar hmm)')
         self.assertEqual(bq(name='foo', cat='bar'), '+name:foo +cat:bar')
         self.assertEqual(bq(name='foo', cat=['bar', 'hmm']), '+name:foo +cat:(bar hmm)')
+        self.assertEqual(bq('foo', name=' '), '+foo +name:" "')
+        self.assertEqual(bq('foo', name=''), '+foo')
 
     def testInvalidArguments(self):
         bq = self.search.buildQuery
@@ -125,6 +133,8 @@ class QueryTests(TestCase):
         self.assertEqual(bq(name='"-foo"', timestamp='"[* TO NOW]"'),
             '+timestamp:[* TO NOW] +name:-foo')
         self.assertEqual(bq(name='"john@foo.com"'), '+name:john@foo.com')
+        self.assertEqual(bq(name='" "'), '+name:" "')
+        self.assertEqual(bq(name='""'), '')
 
     def testComplexQueries(self):
         bq = self.search.buildQuery
