@@ -4,6 +4,9 @@ Changelog
 1.0b3 - Unreleased
 ------------------
 
+* Fix issue regarding quoting of white space when searching.
+  [witsch]
+
 * Make indexing operations more robust in case the schema is missing a
   unique key or couldn't be parsed.
   [witsch]
